# torch-saliency

./: CMakeLists.txt  README.md  README.txt  init.lua  saliency-1.0-0.rockspec  saliency.c  test.lua
generic/: saliency.c
